--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,9 @@
     "./vendor/",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "jasmine-core": "jasmine#~2.4.1",
+    "should": "~8.3.0"
+  }
 }
