--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
     "tests"
   ],
   "devDependencies": {
-    "jasmine-core": "jasmine#~2.4.1",
-    "should": "~8.3.0"
+    "jasmine-core": "jasmine#~2.4.1"
   }
 }
