--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
-    "jasmine-node": "^1.14.5"
-  },
-  "dependencies": {
+    "jasmine-node": "^1.14.5",
     "gulp-jasmine": "^2.3.0"
   }
 }
